force-app/main/default/objects/Aswata_Survey__c/Aswata_Survey__c.object-meta.xml
<CustomObject>
    <!---->
    <label>Aswata Survey</label>
    <nameField>
        <label>Aswata Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aswata Surveys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>