force-app/main/default/objects/Aswata_Survey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Aswata Surveys</relationshipLabel>
    <relationshipName>Aswata_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>