force-app/main/default/objects/Aswata_Survey__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Aswata Surveys</relationshipLabel>
    <relationshipName>Aswata_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>