force-app/main/default/objects/Aswata_Survey__c/fields/Final_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Survey_Date__c</fullName>
    <label>Final Survey Date</label>
    <type>DateTime</type>
</CustomField>