force-app/main/default/objects/Aswata_Survey__c/fields/Final_Survey_Number__c.field-meta.xml
<CustomField>
    <fullName>Final_Survey_Number__c</fullName>
    <externalId>true</externalId>
    <label>Final Survey Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>