force-app/main/default/objects/Aswata_Survey__c/fields/Survey_Branch__c.field-meta.xml
<CustomField>
    <fullName>Survey_Branch__c</fullName>
    <label>Survey Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>