force-app/main/default/objects/Aswata_Survey__c/fields/Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Date__c</fullName>
    <label>Survey Date</label>
    <type>DateTime</type>
</CustomField>