force-app/main/default/objects/Aswata_Survey__c/recordTypes/Underwriting_Survey.recordType-meta.xml
<RecordType>
    <fullName>Underwriting_Survey</fullName>
    <active>true</active>
    <label>Underwriting Survey</label>
</RecordType>